improved resolution previews

--- a/ising_figure_making_mc.ipynb
+++ b/ising_figure_making_mc.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -135,12 +135,12 @@
     "m1 = plot_lattice(output_low_T[\"lattice_history\"][0], axs[0])\n",
     "m2 = plot_lattice(output_high_T[\"lattice_history\"][0], axs[1])\n",
     "\n",
-    "fig.savefig(\"figs/static_mc_spins.png\")"
+    "fig.savefig(\"figs/static_mc_spins.png\", dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation_fig.save(\"figs/animated_mc_spins.gif\")"
+    "animation_fig.save(\"figs/animated_mc_spins.gif\", dpi=300)"
    ]
   },
   {
